--- a/patterns-to-rename.yml
+++ b/patterns-to-rename.yml
@@ -1,82 +1,21 @@
 s3_patterns:
   co-creation and evolution:
-    - driver -> respond to organizational drivers
-    - qualifying organizational drivers
-    - objection
-    - resolve objections
-    - consent decision making
-    - navigating via tension -> navigate via tension
-    - proposal forming
-    - those affected decide
-    - role selection
-    - driver mapping
-  peer development:
-    - ask for help
-    - peer feedback
-    - effectiveness review
-    - development plan
-  enablers of co-creation:
-    - artful participation
-    - adopt the seven principles
-    - agree on values
-    - governance facilitator
-    - evaluate agreements
-    - breaking agreements
-    - contracting and accountability
-    - transparent salary
-    - support roles
-    - bylaws
+    [x] driver -> respond to organizational drivers
+    [x] navigating via tension -> navigate via tension
+    [x] support roles -> support role
+    [x] qualifying organizational drivers -> qualify organizational drivers
+
   bringing in s3:
-    - adapt patterns to context
-    - pull-system for organizational change -> create pull-system for organizational change
-    - be the change
-    - pull in S3 ➤ invite change
-    - open S3 adoption
-    - continuous improvement of work process
+    [x]pull-system for organizational change -> create pull-system for organizational change
+    [x]pull in S3 ➤ invite change
   defining agreements:
-    - agreements -> agreement
-    - strategy
-    - domain description
-    - intended outcome
-    - describing deliverables
-    - evaluation criteria
-    - logbook
-    - logbook keeper
-  focused interactions:
-    - governance meeting
-    - retrospective
-    - daily standup
-    - planning and review meetings
-    - coordination meeting
+    [x]agreements -> agreement
   meeting practices:
-    - rounds
-    - meeting facilitation -> facilitate meetings
-    - meeting evaluation -> evaluate meetings
-    - meeting host
-    - governance backlog
+    [x]meeting facilitation -> facilitate meetings
+    [x]meeting evaluation -> evaluate meetings
   organizing work:
-    - operations backlog -> backlog
-    - prioritized backlog -> prioritize backlogs
-    - visualize work
-    - pull-system for work
-    - limit work in progress
-    - align flow
-    - coordinator role
+    [x]operations backlog -> backlog
+    [x]prioritized backlog -> prioritize backlogs
+    [x]coordinator role -> coordinator
   building organizations:
-    - domain
-    - nested domains -> organize in ???
-    - circle
-    - role
-    - linking
-    - double linking
-    - representative
-  organizational structure:
-    - helping team
-    - service circle
-    - delegate circle
-    - coordination circle
-    - peach organization
-    - double-linked hierarchy
-    - open systems
-    - backbone organization
-    - fractal organization
+    [ ]nested domains -> organize in ???
