updated pattern layout for build script

--- a/s3-all-patterns-explained.yaml
+++ b/s3-all-patterns-explained.yaml
@@ -35,7 +35,7 @@ chapters:
   peer development:
     - ask for help
     - peer feedback
-    - effectiveness review
+    - peer review
     - development plan
   enablers of co-creation:
     - artful participation
@@ -99,5 +99,6 @@ chapters:
     - peach organization
     - double-linked hierarchy
     - open systems
-    - backbone organization
+    - service organization
     - fractal organization
+    - open domain
