switch to glossary in yaml

--- a/glossary.yaml
+++ b/glossary.yaml
@@ -20,7 +20,7 @@ terms:
     glossary: An agreed upon guideline, process or protocol designed to guide the flow of _value_.
   circle:
     name: Circle
-    definition:
+    definition: A **circle** is an equivalent, semi-autonomous and self-governing group of people collaborating to respond to a driver.
     glossary: An _equivalent_, _semi-autonomous_ and _self-governing_ group of people collaborating to respond to a _driver_.
   concern:
     name: Concern
