--- a/glossary.yaml
+++ b/glossary.yaml
@@ -14,14 +14,26 @@ terms:
     name: Accountability
     definition:
     glossary: Respond when something is needed, do what you agreed to and take ownership for the course of the organization.
+  account:
+    name: Account for (v.)
+    glossary: to take the responsibility for something that needs to be addressed.
   agreement:
     name: Agreement
     definition:
     glossary: An agreed upon guideline, process or protocol designed to guide the flow of _value_.
+  alignment:
+    name: Alignment
+    glossary: The process of bringing the actions of all parts of an organization in line with the organization's objectives.
+  chosen-values:
+    name: Chosen Values
+    glossary: A set of principles a group (or an organization) has chosen to collectively adopt to guide their behavior in the context of their collaboration.
   circle:
     name: Circle
-    definition: A **circle** is an equivalent, semi-autonomous and self-governing group of people collaborating to respond to a driver.
+    definition: A **circle** is an equivalent, self-governing, and semi-autonomous group of people collaborating to account for a domain.
     glossary: An _equivalent_, _semi-autonomous_ and _self-governing_ group of people collaborating to respond to a _driver_.
+  complexity:
+    name: Complexity  
+    glossary: An environment where unknowns are unknown, cause and effect can only be understood in retrospect, and actions lead to unpredictable changes, from which instructive patterns may be observed. [Snowden and Boone]
   concern:
     name: Concern
     definition:
@@ -34,14 +46,16 @@ terms:
     name: Continuous Improvement
     definition:
     glossary: Change incrementally to accommodate steady empirical learning.
+  delgatee:
+    name: Delegatee
+    glossary: An individual or group accepting accountability for a domain delegated to them.
+  delegator:
+    name: Delgator
+    glossary: An individual or group delegating a domain to other(s) to be accountable for.
   deliverable:
     name: Deliverable
     definition:
     glossary: Something which is provided as a result of an _agreement_ in response to a _driver_. _Deliverables_ include products, raw materials, services, experiences and transformations.
-  operations:
-    name: Operations (Doing the Work)
-    definition:
-    glossary: People doing what needs to be done, guided by coordination and _governance_.
   domain:
     name: Domain
     definition: A **domain** is a distinct area of influence, activity and decision making within an organization.
@@ -66,10 +80,17 @@ terms:
     name: Governance
     definition:
     glossary: Continuously deciding what to do to achieve objectives, and setting constraints on how and when things will be done.
+  key-responsibilities:
+    name: Key responsibilities  
+    glossary: Essential work and decision making required in the context of a domain.
   logbook:
     name: Logbook
     definition:
     glossary: A (digital) system to store all information relevant for running an _organization_ and its teams. 
+  operations:
+    name: Operations (Doing the Work)
+    definition:
+    glossary: People doing what needs to be done, guided by coordination and _governance_.
   objection:
     name: Objection
     definition:
@@ -106,6 +127,9 @@ terms:
     name: Role
     definition:
     glossary: A set of constraints for how an individual can account for a _domain_.
+  scm:
+    name: SCM
+    glossary: (the Sociocratic Circle-Organisation Method) An egalitarian governance method for organizations based on a sociocratic mindset, developed in the Netherlands by Gerard Endenburg.
   self-governance:
     name: Self-Governance
     definition:
@@ -118,6 +142,9 @@ terms:
     name: Semi-Autonomy
     definition:
     glossary: People with autonomy to create _value_, limited by the constraints of their _domain_.
+  sociocracy:
+    name: Sociocracy
+    glossary: A mindset where people affected by decisions can influence them on the basis of reasons to do so.
   strategy:
     name: Strategy
     definition:
@@ -147,7 +174,7 @@ terms:
     definition:
     glossary: The importance, worth or usefulness of something in relation to a _driver_. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values").
   values:
-    name: values
+    name: Values
     glossary: A set of principles of some significance that guides behavior. Not to be confused with "value" (singular) in the context of a driver. 
   waste:
     name: Waste
