pattern index now generated from yaml file, fixed empty page before index

--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -8,5 +8,10 @@
   {
     "source": "glossary.yaml",
     "translation": "/translations/%two_letters_code%/%original_file_name%"
+  },
+  {
+    "source": "pattern-index.yaml",
+    "translation": "/translations/%two_letters_code%/%original_file_name%"
   }
+
 ]
