updated glossary entry for driver

--- a/glossary.yaml
+++ b/glossary.yaml
@@ -67,7 +67,7 @@ terms:
   driver:
     name: Driver
     definition: A **driver** is a person’s or a group's motive for responding to a specific situation.
-    glossary: A driver is a person’s or a group's motive for responding to a specific situation.
+    glossary: A person’s or a group's motive for responding to a specific situation.
   effectiveness:
     name: Effectiveness
     definition: Devote time only to what brings you closer towards achieving your objectives.
