aligned glossary entry and definition for circle

--- a/glossary.yaml
+++ b/glossary.yaml
@@ -34,7 +34,7 @@ terms:
   circle:
     name: Circle
     definition: A **circle** is an equivalent, self-governing, and semi-autonomous group of people collaborating to account for a domain.
-    glossary: An equivalent, semi-autonomous and self-governing group of people collaborating to respond to a driver.
+    glossary: An equivalent, semi-autonomous and self-governing group of people collaborating to account for a domain.
   complexity:
     name: Complexity  
     glossary: An environment where unknowns are unknown, cause and effect can only be understood in retrospect, and actions lead to unpredictable changes, from which instructive patterns may be observed. [Snowden and Boone]
