--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -12,6 +12,18 @@
   {
     "source": "pattern-index.yaml",
     "translation": "/translations/%two_letters_code%/%original_file_name%"
+  },
+  {
+    "source": "/docs/_config.yml",
+    "translation": "/translations/%two_letters_code%/docs/%original_file_name%"
+  },
+  {
+    "source": "/docs/_templates/*.md",
+    "translation": "/translations/%two_letters_code%/docs/_templates/%original_file_name%"
+  },
+  {
+    "source": "/docs/_include/*.html",
+    "translation": "/translations/%two_letters_code%/docs/_include/%original_file_name%"
   }
 
 ]
