--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ email: bernhard.bockelbrink@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
    The official description of Sociocracy 3.0: All patterns, the Seven Principles and key concepts, maintained by Bernhard Bockelbrink, James Priest and Liliana David.
 
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://s3-working-group.github.io" # the base hostname & protocol for your site
 
 twitter_username: sociocracy30
