--- a/crowdin.yaml
+++ b/crowdin.yaml
@@ -6,6 +6,10 @@
     "translation": "/translations/%two_letters_code%/%original_file_name%"
   },
   {
+    "source": "make-conf",
+    "translation": "/translations/%two_letters_code%/%original_file_name%"
+  },
+  {
     "source": "pattern-index.yaml",
     "translation": "/translations/%two_letters_code%/%original_file_name%"
   },
