added 4 aspects of drivers, added need to glossary

--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ chapters:
   co-creation and evolution:
     - respond to organizational drivers
     - navigate via tension
-    - describe drivers
+    - describe organizational drivers
     - consent decision making
     - objection
     - resolve objections
