--- a/config/project.yaml
+++ b/config/project.yaml
@@ -18,3 +18,6 @@ version: "v2018-03-21"
 # directive for makefile to generate translatable pattern index
 # must be set to "NO" for translations, and "YES" for source language (English)
 build_index: "YES"
+
+# reveal.js config option for RTL languages
+revealjs_rtl: "false"
