First batch of changes in the current sprint

--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -11,12 +11,12 @@ title: Glossary
 continued: (cont.)
 terms:
   accountability:
-    name: Accountability
+    name: Accountability (principle)
     definition:
     glossary: Respond when something is needed, do what you agreed to and take ownership for the course of the organization.
   account:
     name: Account for (v.)
-    glossary: to take the responsibility for something that needs to be addressed.
+    glossary: to take the responsibility for something.
   agreement:
     name: Agreement
     definition: An **agreement** is an agreed upon guideline, process or protocol designed to guide the flow of value.
@@ -27,7 +27,7 @@ terms:
   backlog:
     name: Backlog
     definition: A **backlog** (to-do-list) is a visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed.
-    glossary: A visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed.    
+    glossary: A visible list of (often prioritized) uncompleted work items (drivers) that need to be addressed.
   chosen-values:
     name: Chosen Values
     glossary: A set of principles a group (or an organization) has chosen to collectively adopt to guide their behavior in the context of their collaboration.
@@ -36,20 +36,24 @@ terms:
     definition: A **circle** is an equivalent, self-governing, and semi-autonomous group of people collaborating to account for a domain.
     glossary: An equivalent, semi-autonomous and self-governing group of people collaborating to account for a domain.
   complexity:
-    name: Complexity  
+    name: Complexity
     glossary: An environment where unknowns are unknown, cause and effect can only be understood in retrospect, and actions lead to unpredictable changes. [Snowden and Boone]
   concern:
     name: Concern
     definition:
     glossary: An opinion that doing something might impede – or miss an opportunity to improve – flow of value to an organizational driver.
   consent:
-    name: Consent
+    name: Consent (principle)
     definition:
-    glossary: Do things in the absence of reasons not to.
+    glossary: Raise, seek out and resolve objections related to decisions and actions.
   continuous-improvement:
-    name: Continuous Improvement
+    name: Continuous Improvement (principle)
     definition:
     glossary: Change incrementally to accommodate steady empirical learning.
+  coordination:
+    name: Coordination
+    definition:
+    glossary: The process of enabling individuals or groups to collaborate effectively across different domains to achieve shared objectives.
   delegatee:
     name: Delegatee
     glossary: An individual or group accepting accountability for a domain delegated to them.
@@ -59,7 +63,7 @@ terms:
   deliverable:
     name: Deliverable
     definition:
-    glossary: Something which is provided as a result of an agreement in response to a driver. Deliverables include products, raw materials, services, experiences and transformations.
+    glossary: Deliverables include products, raw materials, services, experiences and transformations provided as a result of an agreement in response to a driver.
   domain:
     name: Domain
     definition: A **domain** is a distinct area of influence, activity and decision making within an organization.
@@ -69,27 +73,30 @@ terms:
     definition: A **driver** is a person’s or a group's motive for responding to a specific situation.
     glossary: A person’s or a group's motive for responding to a specific situation.
   effectiveness:
-    name: Effectiveness
+    name: Effectiveness (principle)
     definition: Devote time only to what brings you closer towards achieving your objectives.
     glossary: Devote time only to what brings you closer towards achieving your objectives.
   empiricism:
-    name: Empiricism
+    name: Empiricism (principle)
     definition:
-    glossary: Test all assumptions through experiments, continuous revision and falsification.
+    glossary: Test all assumptions through experiments and continuous revision.
   equivalence:
-    name: Equivalence
+    name: Equivalence (principle)
     definition:
     glossary: Involve people in making and evolving decisions that affect them.
+ evolve:
+    name: Evolve (v.)
+    glossary: to develop gradually.
   governance:
     name: Governance
     definition:
-    glossary: Continuously deciding what to do to achieve objectives, and setting constraints on how and when things will be done.
+    glossary: Making and evolving decisions about what to do to achieve objectives, and setting constraints on how and when things will be done.
   governance-backlog:
     name: Governance Backlog
     definition: A **governance backlog** is a visible, prioritized list of items (drivers) that are related to governing a domain and require attention.
     glossary: A visible, prioritized list of items (drivers) that are related to governing a domain and require attention.
   key-responsibilities:
-    name: Key responsibilities  
+    name: Key responsibilities
     glossary: Essential work and decision making required in the context of a domain.
   logbook:
     name: Logbook
@@ -100,9 +107,9 @@ terms:
     definition:
     glossary: A need is a lack of something wanted or deemed necessary.
   operations:
-    name: Operations (Doing the Work)
+    name: Operations
     definition:
-    glossary: People doing what needs to be done, guided by coordination and governance.
+    glossary: The work being done to create and deliver value, guided by governance 
   objection:
     name: Objection
     definition: An **objection** is a reason why doing something stands in the way of (more) effective response to a driver.
@@ -133,8 +140,8 @@ terms:
     glossary: The driver that defines a domain is called the primary driver of that domain.
   principle:
     name: Principle
-    definition: A **principle** is a basic idea or rule that explains or controls how something happens or works.
-    glossary: A basic idea or rule that explains or controls how something happens or works.
+    definition: A **principle** is a basic idea or rule that explains, guides or controls how something happens or works.
+    glossary: A basic idea or rule that explains, guides or controls how something happens or works.
   role:
     name: Role
     definition:
@@ -149,11 +156,11 @@ terms:
   self-organization:
     name: Self-Organization
     definition:
-    glossary: People coordinating work within constraints defined through governance.
+    glossary: People organizing work within constraints defined through governance.
   semi-autonomy:
     name: Semi-Autonomy
     definition:
-    glossary: People with autonomy to create value, limited by the constraints of their domain.
+    glossary: The autonomy of people to create value, limited by the constraints of their domain (including the influence of delegator(s) and representatives), and by objections from others.
   sociocracy:
     name: Sociocracy
     glossary: A mindset where people affected by decisions can influence them on the basis of reasons to do so.
@@ -168,7 +175,7 @@ terms:
   subdriver:
     name: Subdriver
     definition:
-    glossary: A subdriver arises as a consequence of people responding to another driver (the superdriver) and is necessary to address to respond to the superdriver. 
+    glossary: A subdriver arises as a consequence of responding to another driver (the superdriver) and is essential for effectively responding to the superdriver.
   superdriver:
     name: Superdriver
     definition:
@@ -178,7 +185,7 @@ terms:
     definition:
     glossary: A domain that fully contains another domain. 
   transparency:
-    name: Transparency
+    name: Transparency (principle)
     definition:
     glossary: Make all information accessible to everyone in an organization, unless there is a reason for confidentiality.
   value:
@@ -187,7 +194,7 @@ terms:
     glossary: The importance, worth or usefulness of something in relation to a driver. Also "a principle of some significance that guides behavior" (mostly used as plural, "values", or "organizational values").
   values:
     name: Values
-    glossary: A set of principles of some significance that guides behavior. Not to be confused with "value" (singular) in the context of a driver. 
+    glossary: Valued principles that guide behaviour. Not to be confused with "value" (singular) in the context of a driver. 
   waste:
     name: Waste
     definition: "**Waste** is anything not necessary for - or standing in the way of - effective response of a driver."
