--- a/content/glossary.yaml
+++ b/content/glossary.yaml
@@ -40,8 +40,8 @@ terms:
     glossary: An environment where unknowns are unknown, cause and effect can only be understood in retrospect, and actions lead to unpredictable changes. [Snowden and Boone]
   concern:
     name: Concern
-    definition:
-    glossary: An opinion that doing something might impede – or miss an opportunity to improve – flow of value to an organizational driver.
+    definition: A **concern** is an _opinion_ that doing something (even in the absence of objections) **might** stand in the way of (more) effective response to an organizational driver.
+    glossary: An _opinion_ why doing something (even in the absence of objections) might stand in the way of (more) effective response to an organizational driver.
   consent:
     name: Consent (principle)
     definition:
@@ -112,8 +112,8 @@ terms:
     glossary: The work being done to create and deliver value, guided by governance 
   objection:
     name: Objection
-    definition: An **objection** is a reason why doing something stands in the way of (more) effective response to a driver.
-    glossary: A reason why doing something stands in the way of (more) effective response to a driver.
+    definition: An **objection** is a _reason_ why doing something stands in the way of (more) effective response to an organizational driver (or objective). 
+    glossary: A _reason_ why doing something stands in the way of (more) effective response to an organizational driver (or objective).
   peer-domain:
     name: Peer Domain
     definition:
@@ -137,7 +137,7 @@ terms:
   primary-driver:
     name: Primary Driver
     definition:
-    glossary: The driver that defines a domain is called the primary driver of that domain.
+    glossary: The primary driver for a domain is the main driver that people who account for that domain respond to,
   principle:
     name: Principle
     definition: A **principle** is a basic idea or rule that explains, guides or controls how something happens or works.
